Closed Bug 478101 Opened 15 years ago Closed 15 years ago

[FIX]Suppress GetUsedX asserts during display list optimization and painting

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(2 files)

We suppress these asserts during display list construction, but not during optimization and painting.  We should do it for all three.
Attached patch Diff -w patchSplinter Review
Attachment #361854 - Flags: superreview?(roc)
Attachment #361854 - Flags: review?(roc)
Attachment #361854 - Flags: superreview?(roc)
Attachment #361854 - Flags: superreview+
Attachment #361854 - Flags: review?(roc)
Attachment #361854 - Flags: review+
Pushed http://hg.mozilla.org/mozilla-central/rev/776c2e2a210b
Status: NEW → RESOLVED
Closed: 15 years ago
OS: Mac OS X → All
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: