Bug 478101.  Suppres GetUsed* assertions during all display list processing, not just during display list construction.  r+sr=roc